--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "prisma": "^4.14.0",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4"
   },
